# glish

./: .drone.yml  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  headerGeneration
cmake/: Findglish.cmake  dependencies.cmake
docker/: Dockerfile
inc/glish/: Texture.hpp  Uniform.hpp  Uniform.tpp  Vao.hpp  Vbo.hpp  Vbo.tpp  uniBase.hpp
inc/glish/program/: Program.hpp  programPipeline.hpp  separableProgram.hpp
inc/glish/utils/: ProgramGL.hpp  log.hpp  trait.hpp  uniContainer.hpp
inc/glish3/: Buffer.hpp  ProgramGL.hpp  Vao.hpp  Vbo.hpp  buffer.hpp  gl_glew.hpp  glfunction.hpp  glish3.hpp  programGL.hpp  program_pipeline.hpp  sampler.hpp  shader.hpp  texture2d.hpp  uniform.hpp
inc/glish3/gl_memory/: unique_buffer.hpp  unique_program_pipeline.hpp  unique_programgl.hpp  unique_sampler.hpp  unique_shader.hpp  unique_texture.hpp  unique_vao.hpp  unique_vbo.hpp
inc/glish3/log/: errorHandler.hpp  log.hpp
inc/glish3/texture/: texture2d.hpp  texture2d_array.hpp  texture_base.hpp  texture_view.hpp
src/: Buffer.cpp  ProgramGL.cpp  Texture.cpp  Vao.cpp  Vbo.cpp  buffer.cpp  glfunction.cpp  programGL.cpp  program_pipeline.cpp  sampler.cpp  shader.cpp  texture2d.cpp  uniContainer.cpp  uniform.cpp
src/log/: errorHandler.cpp  log.cpp
src/program/: Program.cpp  programPipeline.cpp  separableProgram.cpp
src/texture/: texture2d.cpp  texture2d_array.cpp  texture_view.cpp
src/utils/: log.cpp
test/: CMakeLists.txt  frag.glsl  frag_color.glsl  geometry.glsl  main.cpp  tess_eval.glsl  vert.glsl
test/shaders/: frag.glsl  frag_color.glsl  frag_counter.glsl  tess_control.glsl  vert.glsl
utils/: CMakeLists.txt  README.md
utils/inc/utils/: glmAdd.h  stlUtils.h  stringUtil.h  templateUtils.h  tupleUtils.hpp  type_trait.h
utils/src/: glmAdd.cpp  stringUtil.cpp
